fix modal top aligntment

--- a/src/scripts/modules/guide-mode/react/Guide.less
+++ b/src/scripts/modules/guide-mode/react/Guide.less
@@ -275,7 +275,7 @@
           }
         }
         .modal-dialog {
-          top: 385px;
+          top: 383px;
           right: @wizardWidthAside/2 - 2;
           width: @wizardWidthAside;
           .col-md-6 {
